--- a/Application/Res.qrc
+++ b/Application/Res.qrc
@@ -26,5 +26,6 @@
         <file>Icons/edit.ico</file>
         <file>Icons/req_accept.ico</file>
         <file>Icons/req_change.ico</file>
+        <file>Icons/req_status.ico</file>
     </qresource>
 </RCC>
