--- a/Application/ui/mainwindow.ui
+++ b/Application/ui/mainwindow.ui
@@ -206,7 +206,7 @@
      </font>
     </property>
     <property name="tearOffEnabled">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="title">
      <string>&amp;Инфо</string>
