--- a/Application/ui/pgrequestwizard.ui
+++ b/Application/ui/pgrequestwizard.ui
@@ -156,6 +156,9 @@
          <property name="text">
           <string>Тип системы:</string>
          </property>
+         <property name="buddy">
+          <cstring>cb_Type</cstring>
+         </property>
         </widget>
        </item>
        <item>
@@ -180,6 +183,9 @@
          </property>
          <property name="text">
           <string>Описание заявки:</string>
+         </property>
+         <property name="buddy">
+          <cstring>txt_Context</cstring>
          </property>
         </widget>
        </item>
