--- a/Application/ui/uconnect_db.ui
+++ b/Application/ui/uconnect_db.ui
@@ -89,6 +89,9 @@
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
+         <property name="buddy">
+          <cstring>ed_user</cstring>
+         </property>
         </widget>
        </item>
        <item row="1" column="1">
@@ -136,6 +139,9 @@
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
+         <property name="buddy">
+          <cstring>ed_Hostname</cstring>
+         </property>
         </widget>
        </item>
        <item row="2" column="0">
@@ -152,6 +158,9 @@
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+         <property name="buddy">
+          <cstring>ed_Pass</cstring>
          </property>
         </widget>
        </item>
