--- a/Application/ui/mainwindow.ui
+++ b/Application/ui/mainwindow.ui
@@ -23,6 +23,107 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
+     <widget class="QWidget" name="filter_Widget" native="true">
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="topMargin">
+        <number>1</number>
+       </property>
+       <property name="bottomMargin">
+        <number>1</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="lbl_fStatus">
+         <property name="text">
+          <string>Статус</string>
+         </property>
+         <property name="buddy">
+          <cstring>cb_fStatus</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cb_fStatus"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbl_fBeginDate">
+         <property name="text">
+          <string>От:</string>
+         </property>
+         <property name="buddy">
+          <cstring>ded_fBeginDate</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QDateTimeEdit" name="ded_fBeginDate">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="calendarPopup">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbl_fEndDate">
+         <property name="text">
+          <string>До:</string>
+         </property>
+         <property name="buddy">
+          <cstring>ded_fEndDate</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QDateTimeEdit" name="ded_fEndDate">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="time">
+          <time>
+           <hour>23</hour>
+           <minute>59</minute>
+           <second>59</second>
+          </time>
+         </property>
+         <property name="calendarPopup">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="spacer_Filter">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::MinimumExpanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
      <widget class="QTableView" name="tbl_Requests">
       <property name="font">
        <font>
@@ -284,6 +385,8 @@
    <addaction name="act_SetCost"/>
    <addaction name="act_History"/>
    <addaction name="act_ReqClose"/>
+   <addaction name="separator"/>
+   <addaction name="act_Filter"/>
   </widget>
   <action name="act_DBConnection">
    <property name="icon">
@@ -815,6 +918,21 @@
    </property>
    <property name="toolTip">
     <string>Дата последнего изменения</string>
+   </property>
+  </action>
+  <action name="act_Filter">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../Res.qrc">
+     <normaloff>:/icons/Icons/req_filter.ico</normaloff>:/icons/Icons/req_filter.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Фильтр</string>
+   </property>
+   <property name="toolTip">
+    <string>Панель фильтров</string>
    </property>
   </action>
  </widget>
