--- a/Application/Res.qrc
+++ b/Application/Res.qrc
@@ -31,5 +31,6 @@
         <file>Icons/About_QT.ico</file>
         <file>Icons/table_all.ico</file>
         <file>Icons/req_filter.ico</file>
+        <file>Icons/checklist.ico</file>
     </qresource>
 </RCC>
